fixed catalogue spacing

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -203,11 +203,11 @@
 
 .footer-container span {
   color: white;
-  font-size: 0.5rem;
+  font-size: 0.7rem;
 }
 
 .footer-container #copyright {
-  font-size: 0.7rem;
+  font-size: 1rem;
 }
 
 .navigation-btn-container {
